load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

filegroup(
    name = "config",
    srcs = glob(["config/**"]),
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-deployments/bare",
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//go/tools/bazel:go_default_library"],
)

go_binary(
    name = "bare",
    data = [
        ":config",
        "@com_github_buildbarn_bb_browser//cmd/bb_browser",
        "@com_github_buildbarn_bb_remote_execution//cmd/bb_runner",
        "@com_github_buildbarn_bb_remote_execution//cmd/bb_scheduler",
        "@com_github_buildbarn_bb_remote_execution//cmd/bb_worker",
        "@com_github_buildbarn_bb_storage//cmd/bb_storage",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
